--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,6 +1,6 @@
 Options -MultiViews
 
 RewriteEngine On
-RewriteBase /beaumont/web
+RewriteBase /projet-beaumont/web
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^ index.php [QSA,L]
