--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "silex/silex": "^2.1",
-        "twig/twig": "^2.4"
+        "twig/twig": "^2.4",
+        "symfony/twig-bridge": "^3.3"
     }
 }
